Updates namespaces, added handles extensions

--- a/Editor/Pastime.Core.Editor.asmdef
+++ b/Editor/Pastime.Core.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Thundertale.Core.Editor",
+    "name": "Pastime.Core.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:173d6cb67ff24238b8f2d18d150f75f5"
