--- a/Runtime/Pastime.Core.asmdef
+++ b/Runtime/Pastime.Core.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Thundertale.Core",
+    "name": "Pastime.Core",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
