--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "com.thundertale.core",
+  "name": "com.pastime.core",
   "version": "1.0.0",
   "displayName": "Unity Core Library",
   "description": "",
   "unity": "2023.3.15f",
   "author": {
-    "name": "Thundertale"
+    "name": "Pastime Games"
   }
 }
